<resources>
    <string name="app_name">Electronic_controller</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_sign_in">SignIn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hello World</string>
    <string name="push_me">Push Me</string>
    <string name="register">Register</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="re_enter_your_password">Re-Enter your Password</string>
    <string name="registerBtn">Register</string>
    <string name="don_t_have_an_account">Have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="emailRegex">^[a–zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$</string>
    <string name="passwordRegex"><![CDATA[^(?=.*[0–9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=])(?=\\S+$).{4,}$]]></string>
</resources>