<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">


    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        android:inputType="text"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/registerText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/conf_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/conf_passwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/common_signin_button_text"
        app:layout_constraintTop_toBottomOf="@id/haveAccount"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="@color/teal_200"
        />

    <!-- ProgressBar for loading time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>